examples/test/testpolicy10661.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10661
  namespace: namespace325
spec:
  podSelector:
    matchLabels:
      key29: value0
      key33: value23
      key47: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value6
          key23: value12
          key10: value47
      podSelector:
        matchLabels:
          key45: value43
          key18: value37
          key13: value36
